<resources>
    <!-- Titles -->
    <string name="app_name">MusicQueue</string>
    <string name="title_queue">Queues</string>
    <string name="title_favorite">Favorites</string>
    <string name="title_library">Library</string>
    <string name="title_account">Account</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_register">Register</string>
    <string name="title_password_reset">Reset Password</string>
    <string name="title_settings">Settings</string>
    <string name="title_songs">Songs</string>

    <!-- Athuentication -->
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="inavlid_email_address">Invalid email address</string>
    <string name="password_too_short">Invalid password, must be more than 8 characters</string>
    <string name="password_hint">Must be at least 8 characters in length</string>
    <string name="password_matching">Passwords must match</string>
    <string name="back_to_sign_in">Back to sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="send_reset_password_email">Send Reset Password Email</string>
    <string name="email_password">Email/Password</string>
    <string name="google_sign_in">Sign In With Google</string>

    <!-- Queue Fragment -->


    <!-- Favorites Fragment -->
    <string name="no_favorites">
        You don\'t have any favorites! Favorites can be added by clicking the "Favorite" chip
        on the queue page.
    </string>

    <!-- LibrarySongs Fragment -->


    <!-- Account Fragment -->
    <string name="linked_account">Linked Accounts</string>
    <string name="spotify">Spotify</string>

    <!-- Settings Activity -->
    <string name="application_settings">Application Settings</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="notifications">Notifications</string>
    <string name="account_settings">Account Settings</string>
    <string name="update_name">Update Name</string>
    <string name="update_email">Update Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="title_update_display_name">Update Display Name</string>
    <string name="delete_account_paragraph">
        Are you shure you want to delete your account?
        Doing so will result in deletion of all account data, which cannot be restored.
    </string>
    <string name="title_update_email">Update Email Address</string>
    <string name="title_reset_password">Reset Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="places_api">AIzaSyC6EdSo81ynj-ZTA-kZy5clOe-frMgyhTU</string>

</resources>
