<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_queue">

    <fragment
        android:id="@+id/navigation_queue"
        android:name="com.example.musicqueue.ui.queue.QueueFragment"
        android:label="@string/title_queue"
        tools:layout="@layout/fragment_queue" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.musicqueue.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.example.musicqueue.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.musicqueue.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>