<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="304dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/account_image"
                android:layout_width="128sp"
                android:layout_height="128sp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/title_account"
                app:srcCompat="@drawable/ic_account_outline_primary" />

            <TextView
                android:id="@+id/account_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/account_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:fontFamily="@font/lexend_deca"
                android:textAlignment="center"
                android:textColor="@color/colorFontDark"
                android:textSize="16sp"
                tools:text="@string/email" />

            <Button
                android:id="@+id/sign_out_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/sign_out"
                android:textColor="@color/colorPrimary"
                app:cornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="2dp" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/linked_accounts_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16sp"
                android:layout_marginTop="16sp"
                android:layout_marginRight="16sp"
                android:layout_marginBottom="10sp"
                android:text="@string/linked_account"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/spotify_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16sp"
                android:paddingTop="12sp"
                android:paddingRight="16sp"
                android:paddingBottom="12sp"
                android:text="@string/spotify"
                android:textColor="@color/colorFontLight"
                android:textSize="18sp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"/>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"
                android:background="@color/colorInactive" />

            <TextView
                android:id="@+id/settings_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16sp"
                android:layout_marginTop="16sp"
                android:layout_marginRight="16sp"
                android:layout_marginBottom="10sp"
                android:text="@string/title_settings"
                android:textColor="@color/colorAccent" />

            <Switch
                android:id="@+id/dark_theme_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:checked="true"
                android:clickable="true"
                android:paddingLeft="16sp"
                android:paddingTop="12sp"
                android:paddingRight="16sp"
                android:paddingBottom="12sp"
                android:text="@string/dark_theme"
                android:textColor="@color/colorFontLight"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/notifications_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:paddingLeft="16sp"
                android:paddingTop="12sp"
                android:paddingRight="16sp"
                android:paddingBottom="12sp"
                android:text="@string/notifications"
                android:textColor="@color/colorFontLight"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/advanced_settings_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:paddingLeft="16sp"
                android:paddingTop="12sp"
                android:paddingRight="16sp"
                android:paddingBottom="12sp"
                android:text="@string/account_settings"
                android:textColor="@color/colorFontLight"
                android:textSize="18sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>