<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/account_settings_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp"
            android:layout_marginTop="16sp"
            android:layout_marginRight="16sp"
            android:layout_marginBottom="10sp"
            android:text="@string/account_settings"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/delete_account_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:paddingLeft="16sp"
            android:paddingTop="12sp"
            android:paddingRight="16sp"
            android:paddingBottom="12sp"
            android:text="@string/delete_account"
            android:textColor="@color/colorFontLight"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/update_diaplay_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:paddingLeft="16sp"
            android:paddingTop="12sp"
            android:paddingRight="16sp"
            android:paddingBottom="12sp"
            android:text="@string/update_name"
            android:textColor="@color/colorFontLight"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/update_email_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:paddingLeft="16sp"
            android:paddingTop="12sp"
            android:paddingRight="16sp"
            android:paddingBottom="12sp"
            android:text="@string/update_email"
            android:textColor="@color/colorFontLight"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/reset_password_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:paddingLeft="16sp"
            android:paddingTop="12sp"
            android:paddingRight="16sp"
            android:paddingBottom="12sp"
            android:text="@string/reset_password"
            android:textColor="@color/colorFontLight"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>